--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "bigeval": "^3.1.0",
     "expo": "~43.0.0",
     "expo-status-bar": "~1.1.0",
+    "mathjs": "^9.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
